# tinker-voice

./: .env.example  .gitignore  .railwayignore  index.html  nixpacks.toml  package.json  railway.json  render.yaml  server.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
dist-types/: tsconfig.node.tsbuildinfo
docs/future/: self-hosted-gpu-training.md
prompts/: config_agent.md  general_agent.md  intent_agent.md  validation_agent.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/api/: anthropic.rs  elevenlabs.rs  mod.rs  tinker.rs  tonic.rs  yutori.rs
src-tauri/src/commands/: agents.rs  data.rs  mod.rs  research.rs  settings.rs  training.rs  voice.rs
src/components/data/: DataPreview.tsx  DataUploader.tsx  ValidationReport.tsx  index.ts
src/components/training/: ConfigPreview.tsx  CostEstimate.tsx  ModelPlayground.tsx  ProgressCard.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx  index.ts
src/components/voice/: Transcript.tsx  VoiceButton.tsx  Waveform.tsx  index.ts
src/components/yutori/: DataScoutButton.tsx  YutoriResearchPanel.tsx  index.ts
src/hooks/: index.ts  useAgents.ts  useTraining.ts  useVoice.ts
src/lib/: api.ts  export.ts  models.ts
src/pages/: Conversation.tsx  DataReview.tsx  Home.tsx  Settings.tsx  Training.tsx  index.ts
src/types/: index.ts
tinker-service/: README.md  main.py  requirements.txt
